<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_title" />
    <ListPreference
        android:defaultValue="@string/settings_section_default"
        android:entries="@array/settings_section_labels"
        android:entryValues="@array/settings_section_values"
        android:key="@string/settings_section_key"
        android:title="@string/settings_section_title" />
    <EditTextPreference
        android:defaultValue="@string/settings_query_default"
        android:inputType="text"
        android:key="@string/settings_query_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_query_title" />
</PreferenceScreen>